# tempura_reversi

./: .gitignore  Cargo.toml  README.md  memo.md
experimental/temp_game_ml/: Cargo.toml
experimental/temp_game_ml/src/: data_loader.rs  dataset.rs  lib.rs  loss_function.rs  model.rs  optimizer.rs  trainer.rs
experimental/temp_game_ml/src/loss_function/: loss_function.rs  mse.rs
experimental/temp_game_ml/src/optimizer/: adam.rs  adam_w.rs  optimizer.rs
reversi/: Cargo.toml  config.json
reversi/reversi/: Cargo.toml  config.json  test_config.json
reversi/reversi/benches/: search_bench.rs
reversi/reversi/examples/: example.rs
reversi/reversi/src/: ai.rs  array_board.rs  bit_board.rs  board.rs  config.rs  eval_model.rs  game.rs  game_play.rs  gen_data.rs  generate_game_records.rs  lib.rs  main.rs  ml.rs  sparse_vector.rs  training.rs
reversi/reversi/src/ai/: ai_player.rs  evaluate.rs  evaluator.rs  game_play.rs  human_player.rs  learner.rs  model.rs  pattern.rs  pattern.rs~  player.rs  search.rs  self_play.rs  sparse_feature.rs  training.rs
reversi/reversi/src/ai/evaluate/: bit_pattern.rs  mobility_evaluate.rs  model.rs  pattern.rs  pattern_evaluate.rs  positional_evaluate.rs  simple_evaluate.rs  test_evaluate.rs
reversi/reversi/src/ai/evaluator/: mobility_evaluator.rs  pattern_evaluator.rs  positional_evaluator.rs  simple_evaluator.rs  tempura_evaluator.rs  test_evaluator.rs
reversi/reversi/src/ai/search/: negaalpha.rs  negamax.rs
reversi/reversi/src/ml/: dataloader.rs  learner.rs  loss_function.rs  lr_scheduler.rs  model.rs  optimizer.rs  self_play.rs
reversi/reversi/src/ml/loss_function/: cross_entropy.rs  mse.rs
reversi/reversi/src/ml/lr_scheduler/: exponential_lr.rs  step_lr.rs
reversi/reversi/src/ml/optimizer/: adam.rs  sgd.rs
reversi/reversi_ai/: Cargo.toml
reversi/reversi_ai/benches/: search_bench.rs
reversi/reversi_ai/examples/: example.rs
reversi/reversi_ai/src/: ai_player.rs  evaluate.rs  game_play.rs  human_player.rs  lib.rs  minmax.rs  mobility_evaluate.rs  negamax.rs  player.rs  search.rs
reversi/reversi_ai/src/evaluate/: positional_evaluate.rs  simple_evaluate.rs
reversi/reversi_ai/src/search/: negaalpha.rs  negamax.rs
reversi/reversi_core/: Cargo.toml
reversi/reversi_core/src/: array_board.rs  bit_board.rs  board.rs  lib.rs
reversi/reversi_gui/: Cargo.toml
reversi/reversi_gui/src/: board.rs  main.rs
reversi/reversi_ml/: Cargo.toml
reversi/reversi_ml/src/: data.rs  dataloader.rs  learner.rs  loss_function.rs  lr_scheduler.rs  main.rs  model.rs  optimizer.rs  sparse_vector.rs  training.rs
reversi/reversi_ml/src/loss_function/: mse.rs
reversi/reversi_ml/src/lr_scheduler/: exponential_lr.rs  step_lr.rs
reversi/reversi_ml/src/optimizer/: adam.rs
reversi/reversi_ml/test/: train
reversi/reversi_ml_burn/: Cargo.toml
reversi/reversi_ml_burn/src/: data.rs  model.rs  sparse_feature.rs  training.rs
temp_game_ai/: Cargo.toml
temp_game_ai/docs/: dummy_game.md
temp_game_ai/src/: evaluator.rs  game_state.rs  hasher.rs  lib.rs  search.rs  searcher.rs  test_utils.rs  transposition_table.rs  util.rs
temp_game_ai/src/hasher/: fnv1a_hasher.rs
temp_game_ai/src/search/: evaluator.rs  game_state.rs  nega_alpha.rs  nega_alpha_tt.rs  nega_scout.rs
temp_game_ai/src/searcher/: nega_alpha.rs  nega_alpha_tt.rs  nega_max.rs  nega_scout.rs  nega_scout_mpc.rs  searcher.rs
temp_game_ai/src/util/: dummy_game.rs  perft.rs
temp_reversi_ai/: Cargo.toml
temp_reversi_ai/benches/: bench.rs
temp_reversi_ai/src/: ai.rs  ai_decider.rs  ai_player.rs  evaluation.rs  evaluator.rs  learning.rs  lib.rs  main.rs  main.rs.backup  pattern2.rs  patterns.rs  plotter.rs  reversi_state.rs  strategy.rs  utils.rs
temp_reversi_ai/src/evaluation/: pattern.rs  phase_aware.rs  simple.rs  tempura.rs
temp_reversi_ai/src/evaluator/: mobility.rs  pattern.rs  phase_aware.rs  positional.rs  simple.rs  tempura.rs
temp_reversi_ai/src/features/: pattern.rs
temp_reversi_ai/src/learning/: dataset.rs  feature_extraction.rs  game_dataset.rs  game_dataset_generator.rs  game_generator.rs  loss_function.rs  model.rs  optimizer.rs  regularizer.rs  streaming_dataset_reader.rs  streaming_dataset_writer.rs  trainer.rs  training_pipeline.rs
temp_reversi_ai/src/learning/loss_function/: mse.rs
temp_reversi_ai/src/learning/optimizer/: adam.rs
temp_reversi_ai/src/learning/regularizer/: elastic_net.rs  l1.rs  l2.rs
temp_reversi_ai/src/pattern2/: coordinate_to_feature.rs  feature.rs  patterns.rs
temp_reversi_ai/src/patterns/: defined_patterns.rs  pattern.rs  pattern_group.rs  pattern_manager.rs
temp_reversi_ai/src/strategy/: nega_alpha.rs  nega_alpha_tt.rs  nega_scout.rs  nega_scout2.rs  negaalpha_tt.rs  negamax.rs  random.rs  search_state.rs  simple.rs  strategy.rs
temp_reversi_ai/src/utils/: feature.rs  progress.rs  sparse_vector.rs
temp_reversi_ai/tests/: test_nega_max.rs  test_reversi_perft.rs
temp_reversi_cli/: Cargo.toml
temp_reversi_cli/src/: cli_display.rs  cli_player.rs  lib.rs  main.rs  play_game.rs  shuffle_dataset.rs  test_match.rs  utils.rs
temp_reversi_cli/src/utils/: generation_reporter.rs  progress_bar_reporter.rs  training_reporter.rs
temp_reversi_core/: Cargo.toml
temp_reversi_core/src/: bitboard.rs  board.rs  game.rs  lib.rs  player.rs  position.rs  run_game.rs  utils.rs
temp_reversi_eval/: Cargo.toml
temp_reversi_eval/src/: coordinate.rs  coordinate_to_feature.rs  evaluator.rs  feature.rs  feature_offsets.rs  lib.rs  model.rs  patterns.rs  runtime_model.rs
temp_reversi_eval_learn/: Cargo.toml
temp_reversi_eval_learn/src/: dataset.rs
temp_reversi_eval_train/: Cargo.toml  code.md  records
temp_reversi_eval_train/examples/: generate_dataset.rs  generate_records.rs  train_model.rs
temp_reversi_eval_train/src/: dataset.rs  dataset_generator.rs  dataset_loader.rs  feature_packer.rs  game_record.rs  game_record_generator.rs  lib.rs  model.rs  sparse_linear.rs  test_utils.rs  training.rs  training_model.rs  visualizer.rs
