[package]
name = "temp_reversi_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
temp_reversi_core = { path = "../temp_reversi_core" }

[dev-dependencies]
temp_reversi_cli = { path = "../temp_reversi_cli" }
