[package]
name = "temp_reversi_eval"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
lz4_flex = "0.11.3"
serde = { version = "1.0.219", features = ["derive"] }
temp_reversi_core = { path = "../temp_reversi_core" }
temp_reversi_ai = { path = "../temp_reversi_ai" }
rayon = "1.10.0"
