[package]
name = "temp_reversi_eval"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
flate2 = { workspace = true }
temp_reversi_core = { path = "../temp_reversi_core" }
temp_reversi_ai = { path = "../temp_reversi_ai" }
rayon = "1.10.0"

[dev-dependencies]
tempfile = "3.20.0"
