[package]
name = "temp_reversi_eval_train"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.16.1", features = ["train", "ndarray"] }
bincode = { workspace = true }
serde = { workspace = true }
temp_reversi_core = { path = "../temp_reversi_core" }
temp_reversi_ai = { path = "../temp_reversi_ai" }
temp_reversi_eval = { path = "../temp_reversi_eval" }
rayon = "1.10.0"
regex = "1.11.1"
rand = "0.9.1"

[dev-dependencies]
indicatif = "0.17.11"
