[package]
name = "temp_reversi_eval_train"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.17.0", features = ["train", "ndarray", "wgpu"] }
bincode = { workspace = true }
serde = { workspace = true }
temp_reversi_core = { path = "../temp_reversi_core" }
temp_reversi_ai = { path = "../temp_reversi_ai" }
temp_reversi_eval = { path = "../temp_reversi_eval" }
rayon = "1.10.0"
regex = "1.11.1"
rand = "0.9.1"
flate2 = { workspace = true }
tempfile = "3.20.0"
serde_json = "1.0.140"
plotters = "0.3.7"

[dev-dependencies]
indicatif = "0.17.11"
