[package]
name = "reversi"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
burn = { version = "0.15.0", features = ["wgpu"] }
clap = { version = "4.5.23", features = ["derive"] }
derive_builder = "0.20.2"
indicatif = { version = "0.17.9", features = ["rayon"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.135"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "search_bench"
harness = false
